Updates to correct some configuration items and put real info on front and about pages

--- a/content/en/about/_index.html
+++ b/content/en/about/_index.html
@@ -16,23 +16,16 @@ menu:
 {{< /blocks/cover >}}
 
 {{% blocks/lead %}}
-Goldydocs is a sample site using the <a href="https://github.com/google/docsy">Docsy</a> Hugo theme that shows what it can do and provides you with a template site structure. It’s designed for you to clone and edit as much as you like. See the different sections of the documentation and site for more ideas.
+I am currently a graduate student in Mathematics at the University of Wisconsin - Milwaukee. After having spent 20+ years in the IT industry as a small service provider, I decided it was time to take things to the next level. By next level, I mean develop a deep understanding of the mathematics in the fast developing world of machine learning.
+
+In the field of AI, I have the opinion that it is very important to do it right the first time. We will often get results that are difficult or impossible to understand and interpret. If the underlying math that leads to these results is not provable, we could easily  be in a situation of causing harm instead of creating good.
 {{% /blocks/lead %}}
 
 
 {{< blocks/section >}}
-<div class="col-12">
-<h1 class="text-center">This is another section</h1>
-</div>
-
 {{< /blocks/section >}}
 
 
 
 {{< blocks/section >}}
-
-<div class="col-12">
-<h1 class="text-center">This is another section</h1>
-</div>
-
 {{< /blocks/section >}}
