--- a/public/search/index.html
+++ b/public/search/index.html
@@ -116,7 +116,7 @@
 
 <script>
 (function() {
-var cx = '011737558837375720776:fsdu1nryfng';
+var cx = '015536944097765241217:sciqu7tvprn';
 var gcse = document.createElement('script');
 gcse.type = 'text/javascript';
 gcse.async = true;
