--- a/public/about/index.html
+++ b/public/about/index.html
@@ -159,8 +159,8 @@
 <section class="row td-box td-box--1 position-relative td-box--gradient td-box--height-auto">
 	<div class="container text-center td-arrow-down">
 		<span class="h4 mb-0">
-			<p>I am currently a graduate student in Mathematics at the University of Wisconsin - Milwaukee. After having spent 20+ years in the IT industry as a small service provider, I decided it was time to take things to the next level. By next level, I mean develop a deep understanding of the mathematics in the fast developing world of machine learning.</p>
-<p>In the field of AI, I have the opinion that it is very important to do it right the first time. We will often get results that are difficult or impossible to understand and interpret. If the underlying math that leads to these results is not provable, we could easily  be in a situation of causing harm instead of creating good.</p>
+			<p>This site is about the documents. I will write documents in many of the topics with which I am familiar and also some which extend my learning a bit. Typically, these will cover topics such as:</p>
+<p>Machine learning | Mathematics, especially probability and analysis | Digital services | Maker projects | Vision systems | Raspberry pi | Compute environments | and others</p>
 
 		</span>
 	</div>
@@ -176,7 +176,7 @@
 <section class="row td-box td-box--2 td-box--gradient td-box--height-auto">
 	<div class="col">
 		<div class="row ">
-			
+			I am currently a graduate student in Mathematics at the University of Wisconsin - Milwaukee. After having spent 20+ years in the IT industry as a service provider, I decided it was time to take things to the next level. By next level, I mean develop a deep understanding of the mathematics in the fast developing world of machine learning.
 		</div>
 	</div>
 </section>
@@ -192,7 +192,7 @@
 <section class="row td-box td-box--3 td-box--gradient td-box--height-auto">
 	<div class="col">
 		<div class="row ">
-			
+			In the field of AI, I have the opinion that it is very important to do it right the first time. We will often get results that are difficult or impossible to understand and interpret. If the underlying math that leads to these results is not provable, we could easily end up in a situation of causing harm instead of creating good.
 		</div>
 	</div>
 </section>
