Minor changes in naming to remove the long "Documentations" with "Docs"

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -1,10 +1,10 @@
 +++
-title = "Gary Dalton's Documentation"
+title = "Gary's Docsn"
 linkTitle = "Gary Dalton's Documentation"
 
 +++
 
-{{< blocks/cover title="Welcome to Gary Dalton's Documentation: My all things documentation project!" image_anchor="top" height="full" color="orange" >}}
+{{< blocks/cover title="Welcome to Gary's Docs: the gathering place for all of my projects' docs!" image_anchor="top" height="full" color="orange" >}}
 <div class="mx-auto">
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
 		Learn More <i class="fas fa-arrow-alt-circle-right ml-2"></i>
@@ -12,14 +12,14 @@ linkTitle = "Gary Dalton's Documentation"
 	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="https://github.com/gary-dalton/public-documents">
 		Download <i class="fab fa-github ml-2 "></i>
 	</a>
-	<p class="lead mt-5">Digital services | Machine learning | Mathematics</p>
+	<p class="lead mt-5">Digital services | Machine learning | Mathematics | Maker</p>
 	{{< blocks/link-down color="info" >}}
 </div>
 {{< /blocks/cover >}}
 
 
 {{% blocks/lead color="primary" %}}
-These documentations provide a single source for diverse topics such as Mathematics, Programming, Server IT, Machine learning, Maker projects, Raspberry pi, and others.
+These gather into a single place all of my documentations covering diverse topics such as Mathematics, Programming, Server IT, Machine learning, Maker projects, Raspberry pi, and others.
 {{% /blocks/lead %}}
 
 {{< blocks/section color="dark" >}}
@@ -44,6 +44,7 @@ For announcement of latest features etc.
 {{< /blocks/section >}}
 
 
+<!--
 {{< blocks/section >}}
 {{< /blocks/section >}}
 
@@ -55,3 +56,4 @@ For announcement of latest features etc.
 {{< blocks/section >}}
 
 {{< /blocks/section >}}
+-->
