--- a/content/en/about/_index.html
+++ b/content/en/about/_index.html
@@ -7,17 +7,13 @@ menu:
 
 ---
 
-
-{{< blocks/cover title="About Documentation" image_anchor="bottom" height="min" >}}
-
-<p class="lead mt-5">Gary Dalton's documentation on all things.
-</p>
+{{< blocks/cover title="The gathering place for all my project docs." image_anchor="bottom" height="min" >}}
 
 {{< /blocks/cover >}}
 
 {{% blocks/lead %}}
 
-<p>This site is about the documents. I will write documents in many of the topics with which I am familiar and also some which extend my learning a bit. Typically, these will cover topics such as:</p>
+<p>This site is about the documents. I write documents in many of the topics with which I am familiar, some which extend my learning, and some which are basically a log of the steps I took. Typically, these will cover topics such as:</p>
 
 <p>Machine learning | Mathematics, especially probability and analysis | Digital services | Maker projects | Vision systems | Raspberry pi | Compute environments | and others</p>
 
