--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -1,10 +1,10 @@
 +++
-title = "Gary's Docsn"
+title = "Werk Space"
 linkTitle = "Gary Dalton's Documentation"
 
 +++
 
-{{< blocks/cover title="Welcome to Gary's Docs: the gathering place for all of my projects' docs!" image_anchor="top" height="full" color="orange" >}}
+{{< blocks/cover title="Welcome to Werk Space: the gathering place for all of my projects' documentations!" image_anchor="top" height="full" color="orange" >}}
 <div class="mx-auto">
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
 		Learn More <i class="fas fa-arrow-alt-circle-right ml-2"></i>
