Change home image. Add city and green.

--- a/content/en/local/_index.html
+++ b/content/en/local/_index.html
@@ -15,12 +15,12 @@ menu:
 Links that are useful for local community planning and involvement.
 {{% /blocks/feature %}}
 
-{{% blocks/feature icon="fa-regular fa-tree" title="Green" url="https://github.com/gohugoio/hugo" %}}
-Not yet
+{{% blocks/feature icon="fa-regular fa-tree" title="Our Green Environment" url="green/" %}}
+Thoughts and ideas on making and maintaining our green community.
 {{% /blocks/feature %}}
 
-{{% blocks/feature icon="fa-solid fa-city" title="City" url="https://twitter.com/GoHugoIO" %}}
-Not yet
+{{% blocks/feature icon="fa-solid fa-city" title="Livable City" url="https://twitter.com/GoHugoIO" %}}
+Making our city livable and sustainable. This includes diversifying our transportation and housing options.
 {{% /blocks/feature %}}
 
 
