Correct city link

--- a/content/en/local/_index.html
+++ b/content/en/local/_index.html
@@ -19,7 +19,7 @@ Links that are useful for local community planning and involvement.
 Thoughts and ideas on making and maintaining our green community.
 {{% /blocks/feature %}}
 
-{{% blocks/feature icon="fa-solid fa-city" title="Livable City" url="https://twitter.com/GoHugoIO" %}}
+{{% blocks/feature icon="fa-solid fa-city" title="Livable City" url="city" %}}
 Making our city livable and sustainable. This includes diversifying our transportation and housing options.
 {{% /blocks/feature %}}
 
