--- a/public/local/index.html
+++ b/public/local/index.html
@@ -221,7 +221,7 @@ if (!doNotTrack) {
 <p>Making our city livable and sustainable. This includes diversifying our transportation and housing options.</p>
 
 </div>
-<p><a href="https://twitter.com/GoHugoIO">Read more …</a></p>
+<p><a href="city">Read more …</a></p>
 </div>
 
 
