Add linkage and subpages to Local.

--- a/public/local/index.html
+++ b/public/local/index.html
@@ -268,7 +268,7 @@ if (!doNotTrack) {
 <p>Not yet</p>
 
 </div>
-<p><a href="https://twitter.com/GoHugoIO">Read more …</a></p>
+<p><a href="governance">Read more …</a></p>
 </div>
 
 
@@ -281,7 +281,7 @@ if (!doNotTrack) {
 <p>Not yet</p>
 
 </div>
-<p><a href="https://twitter.com/GoHugoIO">Read more …</a></p>
+<p><a href="economy">Read more …</a></p>
 </div>
 
 
@@ -294,7 +294,7 @@ if (!doNotTrack) {
 <p>Not yet</p>
 
 </div>
-<p><a href="https://twitter.com/GoHugoIO">Read more …</a></p>
+<p><a href="help">Read more …</a></p>
 </div>
 
 
