--- a/public/local/links/index.html
+++ b/public/local/links/index.html
@@ -151,6 +151,12 @@ if (!doNotTrack) {
   <a href="/local/green/" title="Our Green Environment" class="align-left pl-0 td-sidebar-link td-sidebar-link__section" id="m-localgreen"><span class="">Green</span></a>
 </li><li class="td-sidebar-nav__section-title td-sidebar-nav__section without-child" id="m-localcity-li">
   <a href="/local/city/" title="Livable City" class="align-left pl-0 td-sidebar-link td-sidebar-link__section" id="m-localcity"><span class="">City</span></a>
+</li><li class="td-sidebar-nav__section-title td-sidebar-nav__section without-child" id="m-localgovernance-li">
+  <a href="/local/governance/" class="align-left pl-0 td-sidebar-link td-sidebar-link__section" id="m-localgovernance"><span class="">Governance</span></a>
+</li><li class="td-sidebar-nav__section-title td-sidebar-nav__section without-child" id="m-localeconomy-li">
+  <a href="/local/economy/" class="align-left pl-0 td-sidebar-link td-sidebar-link__section" id="m-localeconomy"><span class="">Economy</span></a>
+</li><li class="td-sidebar-nav__section-title td-sidebar-nav__section without-child" id="m-localhelp-li">
+  <a href="/local/help/" title="Help out" class="align-left pl-0 td-sidebar-link td-sidebar-link__page" id="m-localhelp"><span class="">Help</span></a>
 </li>
   </ul>
 </li>
