--- a/content/en/local/_index.html
+++ b/content/en/local/_index.html
@@ -34,15 +34,15 @@ Making our city livable and sustainable. This includes diversifying our transpor
 {{< blocks/section color="primary" >}}
 
 
-{{% blocks/feature icon="fa-solid fa-users" title="Governance" url="https://twitter.com/GoHugoIO" %}}
+{{% blocks/feature icon="fa-solid fa-users" title="Governance" url="governance" %}}
 Not yet
 {{% /blocks/feature %}}
 
-{{% blocks/feature icon="fa-solid fa-chart-line" title="Economics" url="https://twitter.com/GoHugoIO" %}}
+{{% blocks/feature icon="fa-solid fa-chart-line" title="Economics" url="economy" %}}
 Not yet
 {{% /blocks/feature %}}
 
-{{% blocks/feature icon="fa-solid fa-handshake" title="Help out" url="https://twitter.com/GoHugoIO" %}}
+{{% blocks/feature icon="fa-solid fa-handshake" title="Help out" url="help" %}}
 Not yet
 {{% /blocks/feature %}}
 
