--- a/public/local/economy/index.html
+++ b/public/local/economy/index.html
@@ -252,7 +252,10 @@ if (!doNotTrack) {
 
 	
 	
-	
+	<div class="text-muted mt-5 pt-3 border-top">
+  Last modified July 15, 2022: <a href="https://github.com/gary-dalton/public-documents/commit/623974e32bd09bae0e0e909c21b124d91df48375">Add linkage and subpages to Local. (623974e)</a>
+</div>
+
 </div>
 
           </main>
