--- a/public/local/help/index.html
+++ b/public/local/help/index.html
@@ -146,7 +146,7 @@ if (!doNotTrack) {
   <a href="/local/" class="align-left pl-0 td-sidebar-link td-sidebar-link__section tree-root" id="m-local"><span class="">Local</span></a>
   <ul class="ul-1">
     <li class="td-sidebar-nav__section-title td-sidebar-nav__section without-child" id="m-locallinks-li">
-  <a href="/local/links/" title="Useful Links" class="align-left pl-0 td-sidebar-link td-sidebar-link__page" id="m-locallinks"><span class="">Links</span></a>
+  <a href="/local/links/" title="Useful Links" class="align-left pl-0 td-sidebar-link td-sidebar-link__section" id="m-locallinks"><span class="">Links</span></a>
 </li><li class="td-sidebar-nav__section-title td-sidebar-nav__section without-child" id="m-localgreen-li">
   <a href="/local/green/" title="Our Green Environment" class="align-left pl-0 td-sidebar-link td-sidebar-link__section" id="m-localgreen"><span class="">Green</span></a>
 </li><li class="td-sidebar-nav__section-title td-sidebar-nav__section without-child" id="m-localcity-li">
