Delete some irrelevant example content.

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -1,10 +1,10 @@
 +++
 title = "Werk Space"
-linkTitle = "Gary Dalton's Documentation"
+linkTitle = "Dalton's Documentation"
 
 +++
 
-{{< blocks/cover title="Welcome to Werk Space: the gathering place for all of my projects' documentations!" image_anchor="top" height="full" color="orange" >}}
+{{< blocks/cover title="Welcome to Werk Space: The gathering place for all of daltons.ai, Intellamech, and Gary's Documentations." image_anchor="top" height="full" color="orange" >}}
 <div class="mx-auto">
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
 		Learn More <i class="fas fa-arrow-alt-circle-right ml-2"></i>
