Making it public

--- a/public/index.html
+++ b/public/index.html
@@ -38,16 +38,16 @@
 
 ">
 <meta property="og:title" content="Werk Space" />
-<meta property="og:description" content="The gathering place for all of Gary&#39;s Documentations." />
+<meta property="og:description" content="The gathering place for all of daltons.ai, Intellamech and Gary&#39;s Documentations." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="/" /><meta property="og:image" content="https://twitter.com/gfdalton/photo"/><meta property="og:site_name" content="Werk Space" />
+<meta property="og:url" content="/" /><meta property="og:image" content="/logo_white_words.png"/><meta property="og:site_name" content="Werk Space" />
 
 <meta itemprop="name" content="Werk Space">
-<meta itemprop="description" content="The gathering place for all of Gary&#39;s Documentations."><meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://twitter.com/gfdalton/photo"/>
+<meta itemprop="description" content="The gathering place for all of daltons.ai, Intellamech and Gary&#39;s Documentations."><meta name="twitter:card" content="summary_large_image"/>
+<meta name="twitter:image" content="/logo_white_words.png"/>
 
 <meta name="twitter:title" content="Werk Space"/>
-<meta name="twitter:description" content="The gathering place for all of Gary&#39;s Documentations."/>
+<meta name="twitter:description" content="The gathering place for all of daltons.ai, Intellamech and Gary&#39;s Documentations."/>
 
 
 
@@ -59,17 +59,6 @@
   src="https://code.jquery.com/jquery-3.6.0.min.js"
   integrity="sha384-vtXRMe3mGCbOeY7l30aIg8H9p3GdeSe4IFlP6G8JMa7o7lXvnz3GFKzPxzJdPfGK"
   crossorigin="anonymous"></script>
-
-<script type="application/javascript">
-var doNotTrack = false;
-if (!doNotTrack) {
-	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-	ga('create', 'UA-00000000-0', 'auto');
-	
-	ga('send', 'pageview');
-}
-</script>
-<script async src='https://www.google-analytics.com/analytics.js'></script>
 
   </head>
   <body class="td-home">
@@ -176,7 +165,7 @@ if (!doNotTrack) {
     <div class="row">
       <div class="col-12">
         <div class="text-center">
-          <h1 class="display-1 mt-0 mt-md-5 pb-4">Welcome to Werk Space: the gathering place for all of my projects&#39; documentations!</h1>
+          <h1 class="display-1 mt-0 mt-md-5 pb-4"><img class="td-cover-logo" src="/logo_white_words_hu857a56a72fd41b3f1b2b8bde1db5b80f_68021_70x70_fit_catmullrom_3.png" alt="Welcome to Werk Space: The gathering place for all of daltons.ai, Intellamech, and Gary&#39;s Documentations. Logo">Welcome to Werk Space: The gathering place for all of daltons.ai, Intellamech, and Gary&#39;s Documentations.</h1>
           
           <div class="pt-3 lead">
             
