--- a/public/local/city/index.html
+++ b/public/local/city/index.html
@@ -24,11 +24,11 @@
 <meta property="og:title" content="Livable City" />
 <meta property="og:description" content="Making our city livable and sustainable" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="/local/city/" /><meta property="og:image" content="https://twitter.com/gfdalton/photo"/><meta property="og:site_name" content="Werk Space" />
+<meta property="og:url" content="/local/city/" /><meta property="og:image" content="/logo_white_words.png"/><meta property="og:site_name" content="Werk Space" />
 
 <meta itemprop="name" content="Livable City">
 <meta itemprop="description" content="Making our city livable and sustainable"><meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://twitter.com/gfdalton/photo"/>
+<meta name="twitter:image" content="/logo_white_words.png"/>
 
 <meta name="twitter:title" content="Livable City"/>
 <meta name="twitter:description" content="Making our city livable and sustainable"/>
@@ -43,17 +43,6 @@
   src="https://code.jquery.com/jquery-3.6.0.min.js"
   integrity="sha384-vtXRMe3mGCbOeY7l30aIg8H9p3GdeSe4IFlP6G8JMa7o7lXvnz3GFKzPxzJdPfGK"
   crossorigin="anonymous"></script>
-
-<script type="application/javascript">
-var doNotTrack = false;
-if (!doNotTrack) {
-	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-	ga('create', 'UA-00000000-0', 'auto');
-	
-	ga('send', 'pageview');
-}
-</script>
-<script async src='https://www.google-analytics.com/analytics.js'></script>
 
   </head>
   <body class="td-section">
@@ -237,6 +226,8 @@ if (!doNotTrack) {
 
 </div>
 
+<p>Any thoughts on evictions? <a href="https://evictionlab.org/map/?m=modeled&amp;c=p&amp;b=efr&amp;s=all&amp;r=counties&amp;y=2018&amp;z=4.26&amp;lat=39.14&amp;lon=-99.44&amp;lang=en">https://evictionlab.org/map/?m=modeled&amp;c=p&amp;b=efr&amp;s=all&amp;r=counties&amp;y=2018&amp;z=4.26&amp;lat=39.14&amp;lon=-99.44&amp;lang=en</a> now has coast to coast data.</p>
+<p>The first public school in the colonies was in 1635. Public education has been deemed important throughout our history because, especially in a participatory democracy, a well educated populace is essential to the functioning of our society. Do you disagree with that?</p>
 
         <div class="section-index">
     
@@ -253,7 +244,7 @@ if (!doNotTrack) {
 	
 	
 	<div class="text-muted mt-5 pt-3 border-top">
-  Last modified July 15, 2022: <a href="https://github.com/gary-dalton/public-documents/commit/b171fa98ab79aa23b5c967d1406d3b5906325b02">Change home image. Add city and green. (b171fa9)</a>
+  Last modified August 8, 2022: <a href="https://github.com/gary-dalton/public-documents/commit/1b3ccc791cf30515aedfb7e629e3e9c7dcdb11d1">Delete some irrelevant example content. (1b3ccc7)</a>
 </div>
 
 </div>
