--- a/public/local/governance/index.html
+++ b/public/local/governance/index.html
@@ -24,11 +24,11 @@
 <meta property="og:title" content="Governance" />
 <meta property="og:description" content="Justice, peace, making the positive happen" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="/local/governance/" /><meta property="og:image" content="https://twitter.com/gfdalton/photo"/><meta property="og:site_name" content="Werk Space" />
+<meta property="og:url" content="/local/governance/" /><meta property="og:image" content="/logo_white_words.png"/><meta property="og:site_name" content="Werk Space" />
 
 <meta itemprop="name" content="Governance">
 <meta itemprop="description" content="Justice, peace, making the positive happen"><meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://twitter.com/gfdalton/photo"/>
+<meta name="twitter:image" content="/logo_white_words.png"/>
 
 <meta name="twitter:title" content="Governance"/>
 <meta name="twitter:description" content="Justice, peace, making the positive happen"/>
@@ -43,17 +43,6 @@
   src="https://code.jquery.com/jquery-3.6.0.min.js"
   integrity="sha384-vtXRMe3mGCbOeY7l30aIg8H9p3GdeSe4IFlP6G8JMa7o7lXvnz3GFKzPxzJdPfGK"
   crossorigin="anonymous"></script>
-
-<script type="application/javascript">
-var doNotTrack = false;
-if (!doNotTrack) {
-	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-	ga('create', 'UA-00000000-0', 'auto');
-	
-	ga('send', 'pageview');
-}
-</script>
-<script async src='https://www.google-analytics.com/analytics.js'></script>
 
   </head>
   <body class="td-section">
@@ -237,6 +226,7 @@ if (!doNotTrack) {
 
 </div>
 
+<p>&ldquo;A Government founded upon justice, and recognizing the equal rights of all men; claiming no higher authority for existence, or sanction for its laws, than nature, reason, and the regularly ascertained will of the people; steadily refusing to put its sword and purse in the  service of any religious creed or family&rdquo; &ndash; Douglass</p>
 
         <div class="section-index">
     
@@ -253,7 +243,7 @@ if (!doNotTrack) {
 	
 	
 	<div class="text-muted mt-5 pt-3 border-top">
-  Last modified July 15, 2022: <a href="https://github.com/gary-dalton/public-documents/commit/623974e32bd09bae0e0e909c21b124d91df48375">Add linkage and subpages to Local. (623974e)</a>
+  Last modified August 8, 2022: <a href="https://github.com/gary-dalton/public-documents/commit/1b3ccc791cf30515aedfb7e629e3e9c7dcdb11d1">Delete some irrelevant example content. (1b3ccc7)</a>
 </div>
 
 </div>
