--- a/public/404.html
+++ b/public/404.html
@@ -21,16 +21,16 @@
 <title>404 Page not found | Werk Space</title>
 <meta name="description" content="">
 <meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="The gathering place for all of Gary&#39;s Documentations." />
+<meta property="og:description" content="The gathering place for all of daltons.ai, Intellamech and Gary&#39;s Documentations." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="/404.html" /><meta property="og:image" content="https://twitter.com/gfdalton/photo"/><meta property="og:site_name" content="Werk Space" />
+<meta property="og:url" content="/404.html" /><meta property="og:image" content="/logo_white_words.png"/><meta property="og:site_name" content="Werk Space" />
 
 <meta itemprop="name" content="404 Page not found">
-<meta itemprop="description" content="The gathering place for all of Gary&#39;s Documentations."><meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://twitter.com/gfdalton/photo"/>
+<meta itemprop="description" content="The gathering place for all of daltons.ai, Intellamech and Gary&#39;s Documentations."><meta name="twitter:card" content="summary_large_image"/>
+<meta name="twitter:image" content="/logo_white_words.png"/>
 
 <meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content="The gathering place for all of Gary&#39;s Documentations."/>
+<meta name="twitter:description" content="The gathering place for all of daltons.ai, Intellamech and Gary&#39;s Documentations."/>
 
 
 
@@ -42,17 +42,6 @@
   src="https://code.jquery.com/jquery-3.6.0.min.js"
   integrity="sha384-vtXRMe3mGCbOeY7l30aIg8H9p3GdeSe4IFlP6G8JMa7o7lXvnz3GFKzPxzJdPfGK"
   crossorigin="anonymous"></script>
-
-<script type="application/javascript">
-var doNotTrack = false;
-if (!doNotTrack) {
-	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-	ga('create', 'UA-00000000-0', 'auto');
-	
-	ga('send', 'pageview');
-}
-</script>
-<script async src='https://www.google-analytics.com/analytics.js'></script>
 
   </head>
   <body class="td-404">
