Make it public.

--- a/public/local/links/index.html
+++ b/public/local/links/index.html
@@ -232,6 +232,9 @@
 		
 	</header>
 	<p>Right now this is just a semi-organized bag of links. I will work through these for better organization and hopefully add some ratings to the links.</p>
+<p><a href="https://github.com/sensepost/gowitness/wiki/Usage">https://github.com/sensepost/gowitness/wiki/Usage</a></p>
+<p><a href="https://www.youtube.com/watch?v=2xkNJL4gJ9E&amp;t=2s">https://www.youtube.com/watch?v=2xkNJL4gJ9E&amp;t=2s</a></p>
+<p><a href="https://github.com/probml/pml2-book/releases/tag/2022-07-29">https://github.com/probml/pml2-book/releases/tag/2022-07-29</a></p>
 <h2 id="transportation">Transportation</h2>
 <ul>
 <li>US DOT: <a href="https://www.transportation.gov/leadershipacademy/resource-library">https://www.transportation.gov/leadershipacademy/resource-library</a>
@@ -597,6 +600,21 @@
 	
 </div></p>
 </li>
+<li>
+<p><a href="https://county.milwaukee.gov/EN/Vision/Strategy-Dashboard/Workforce-Data">https://county.milwaukee.gov/EN/Vision/Strategy-Dashboard/Workforce-Data</a></p>
+</li>
+<li>
+<p><a href="https://www.mercatus.org/publications/urban-economics/housing-reform-states-menu-options-2023">https://www.mercatus.org/publications/urban-economics/housing-reform-states-menu-options-2023</a></p>
+</li>
+<li>
+<p><a href="https://county.milwaukee.gov/EN/Strategy-Budget-and-Performance/Budget-Office/Budget-2023">https://county.milwaukee.gov/EN/Strategy-Budget-and-Performance/Budget-Office/Budget-2023</a></p>
+</li>
+<li>
+<p><a href="https://www.dropbox.com/s/d09y78weq88uoqf/2023%20Budget%20Town%20Hall%20Deck%20UPDATED%20FINAL%20081622.pptx?dl=0">https://www.dropbox.com/s/d09y78weq88uoqf/2023%20Budget%20Town%20Hall%20Deck%20UPDATED%20FINAL%20081622.pptx?dl=0</a></p>
+</li>
+<li>
+<p><a href="https://data.footprintnetwork.org/#/countryTrends?type=earth&amp;cn=9">https://data.footprintnetwork.org/#/countryTrends?type=earth&amp;cn=9</a></p>
+</li>
 </ul>
 
         <div class="section-index">
@@ -614,7 +632,7 @@
 	
 	
 	<div class="text-muted mt-5 pt-3 border-top">
-  Last modified August 8, 2022: <a href="https://github.com/gary-dalton/public-documents/commit/1b3ccc791cf30515aedfb7e629e3e9c7dcdb11d1">Delete some irrelevant example content. (1b3ccc7)</a>
+  Last modified October 12, 2022: <a href="https://github.com/gary-dalton/public-documents/commit/3e3f5a956010071ccee43afadcce0cc75c89ccc0">Add WordPress on AWS Lightsail tutorial. (3e3f5a9)</a>
 </div>
 
 </div>
