--- a/content/en/local/_index.html
+++ b/content/en/local/_index.html
@@ -37,11 +37,11 @@ Making our city livable and sustainable. This includes diversifying our transpor
 {{< feature-row >}}
 
 {{% blocks/feature icon="fa-solid fa-users" title="Governance" url="governance" %}}
-Not yet
+Governance does not mean using coercive force to make the people happy. Instead it means doing what is needed to make a successful, dynamic, and structurally sound society.
 {{% /blocks/feature %}}
 
 {{% blocks/feature icon="fa-solid fa-chart-line" title="Economics" url="economy" %}}
-Not yet
+A thriving economy is an extremely important driver of every successful society. Here we will highlight some thoughts on this issue.
 {{% /blocks/feature %}}
 
 {{% blocks/feature icon="fa-solid fa-handshake" title="Help out" url="help" %}}
