Fix some broken links

--- a/public/local/economy/datacenters/benefits-brief/index.html
+++ b/public/local/economy/datacenters/benefits-brief/index.html
@@ -245,7 +245,7 @@
 <li>Train future tech leaders</li>
 <li>Provide technical expertise to state agencies</li>
 </ul>
-<p>Create an <a href="//localhost:1313/local/economy/datacenters/wi-ai-governance/">Wisconsin AI Governance &amp; Safety Institute</a> as outlined.</p>
+<p>Create an <a href="/local/economy/datacenters/wi-ai-governance/">Wisconsin AI Governance &amp; Safety Institute</a> as outlined.</p>
 <p><strong>Precedent:</strong> Meta, Microsoft, and OpenAI fund similar initiatives worldwide.</p>
 <hr>
 <h3 id="4-workforce--apprenticeship-pipelines">4. Workforce &amp; Apprenticeship Pipelines</h3>
