--- a/public/local/economy/datacenters/evaluating-proposals/index.html
+++ b/public/local/economy/datacenters/evaluating-proposals/index.html
@@ -519,7 +519,7 @@ But if approached strategically, it can define the state’s trajectory for gene
 <hr>
 <h2 id="recommendations-for-wisconsin"><strong>Recommendations for Wisconsin</strong></h2>
 <p>Wisconsin is receiving an unprecedented wave of hyperscale data-center proposals. These projects can be catalysts for economic renewal — <em>if</em> the state pairs them with forward-looking, community-oriented initiatives that strengthen resilience, governance, education, and digital capacity.</p>
-<p>See the addittional documents, <a href="//localhost:1313/local/economy/datacenters/benefits-brief/">Community Technology Partnership Opportunities for Wisconsin</a> and <a href="//localhost:1313/local/economy/datacenters/wi-ai-governance/">Wisconsin AI Governance</a>.</p>
+<p>See the addittional documents, <a href="/local/economy/datacenters/benefits-brief/">Community Technology Partnership Opportunities for Wisconsin</a> and <a href="/local/economy/datacenters/wi-ai-governance/">Wisconsin AI Governance</a>.</p>
 <hr>
 <h3 id="1-establish-a-statewide-data-center-regulatory-framework">1. Establish a Statewide Data Center Regulatory Framework</h3>
 <p>Wisconsin needs consistent, predictable standards that apply to all hyperscale development.
@@ -677,7 +677,7 @@ Wisconsin should require participating companies to:</p>
 <hr>
 <h2 id="appendix-a--policy-questions"><strong>Appendix A — Policy Questions</strong></h2>
 <p>A consolidated list of the <strong>targeted questions</strong>, grouped by category has been moved to a separate document.</p>
-<p><strong><a href="//localhost:1313/local/economy/datacenters/policy-questions/">Policy Questions - Wisconsin Data Center Projects</a></strong></p>
+<p><strong><a href="/local/economy/datacenters/policy-questions/">Policy Questions - Wisconsin Data Center Projects</a></strong></p>
 <hr>
 <h2 id="appendix-b--glossary"><strong>Appendix B — Glossary</strong></h2>
 <p><strong>Additionality</strong> — Clean energy that is newly built as a direct result of the data center’s commitments.</p>
