--- a/public/local/economy/datacenters/index.html
+++ b/public/local/economy/datacenters/index.html
@@ -174,11 +174,11 @@
 	<p>A thriving economy is an extremely important driver of every successful society. Perhaps, data centers are a part of that. Here we will highlight some thoughts on this issue.</p>
 <p>The recommended read order is:</p>
 <ol>
-<li><a href="//localhost:1313/local/economy/datacenters/forward-thinking/"><em>The Benefits of a Forward-Thinking Technology Stance for Wisconsin</em></a></li>
-<li><a href="//localhost:1313/local/economy/datacenters/benefits-brief/"><em>Community Technology Partnership Opportunities for Wisconsin</em></a></li>
-<li><a href="//localhost:1313/local/economy/datacenters/policy-questions/"><em>Policy Questions - Wisconsin Data Center Projects</em></a></li>
-<li><a href="//localhost:1313/local/economy/datacenters/evaluating-proposals/"><em>Evaluating Proposals</em></a></li>
-<li><a href="//localhost:1313/local/economy/datacenters/wi-ai-governance/"><em>Wisconsin AI Governance</em></a></li>
+<li><a href="/local/economy/datacenters/forward-thinking/"><em>The Benefits of a Forward-Thinking Technology Stance for Wisconsin</em></a></li>
+<li><a href="/local/economy/datacenters/benefits-brief/"><em>Community Technology Partnership Opportunities for Wisconsin</em></a></li>
+<li><a href="/local/economy/datacenters/policy-questions/"><em>Policy Questions - Wisconsin Data Center Projects</em></a></li>
+<li><a href="/local/economy/datacenters/evaluating-proposals/"><em>Evaluating Proposals</em></a></li>
+<li><a href="/local/economy/datacenters/wi-ai-governance/"><em>Wisconsin AI Governance</em></a></li>
 </ol>
 
 	<div class="section-index">
